--- a/_hands-on/infra/kind.yaml
+++ b/_hands-on/infra/kind.yaml
@@ -43,3 +43,10 @@ nodes:
           kubeletExtraArgs:
             kube-reserved: "cpu=7,memory=15Gi"
             system-reserved: "cpu=1,memory=1Gi"
+  - role: worker
+    kubeadmConfigPatches:
+      - |
+        kind: JoinConfiguration
+        nodeRegistration:
+          kubeletExtraArgs:
+            node-labels: "workload=platform"
