--- a/_hands-on/infra/manifest/ingress.yaml
+++ b/_hands-on/infra/manifest/ingress.yaml
@@ -2,7 +2,7 @@ apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: load-gen-node-ingress
-  namespace: hands-on-lab
+  namespace: application
   annotations:
     ingress.kubernetes.io/rewrite-target: /
 spec:
