--- a/_hands-on/infra/manifest/hpa.yaml
+++ b/_hands-on/infra/manifest/hpa.yaml
@@ -2,7 +2,7 @@ apiVersion: autoscaling/v2
 kind: HorizontalPodAutoscaler
 metadata:
   name: load-gen-node-hpa
-  namespace: hands-on-lab
+  namespace: application
 spec:
   scaleTargetRef:
     apiVersion: apps/v1
