--- a/_hands-on/infra/manifest/service.yaml
+++ b/_hands-on/infra/manifest/service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: load-gen-node-service
-  namespace: hands-on-lab
+  namespace: application
 spec:
   selector:
     app: load-gen-node
