Refactor setup script to streamline commands, update load-gen-node Dockerfile for OpenTelemetry integration, and modify deployment configuration to use versioned image for load generation service.

--- a/_hands-on/infra/manifest/deployment.yaml
+++ b/_hands-on/infra/manifest/deployment.yaml
@@ -24,7 +24,7 @@ spec:
           effect: "NoSchedule"
       containers:
         - name: load-gen-node
-          image: localhost/load-gen-node:latest
+          image: localhost/load-gen-node:v2
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3000
