--- a/_hands-on/projects/load-gen-node/Dockerfile
+++ b/_hands-on/projects/load-gen-node/Dockerfile
@@ -1,5 +1,11 @@
 FROM node:18-slim
 
+ENV RUNNING_ON_CONTAINER=true
+ENV OTEL_EXPORTER_OTLP_ENDPOINT=http://signoz-otel-collector.platform.svc.cluster.local:4318
+ENV OTEL_SERVICE_NAME=load-gen-node
+ENV OTEL_SERVICE_VERSION=1.0.0
+ENV OTEL_LOG_LEVEL=info
+
 WORKDIR /app
 
 COPY package*.json ./
@@ -10,5 +16,4 @@ COPY . .
 
 EXPOSE 3000
 
-CMD ["npm", "start"]
-
+CMD node --require ./instrumentation.js index.js
