Update project context and port-forwarding script to reflect changes in Kong service paths, add Kong Proxy port-forwarding, and adjust Ingress configuration for load-gen-node application.

--- a/_hands-on/infra/manifest/ingress.yaml
+++ b/_hands-on/infra/manifest/ingress.yaml
@@ -4,13 +4,13 @@ metadata:
   name: load-gen-node-ingress
   namespace: application
   annotations:
-    ingress.kubernetes.io/rewrite-target: /
+    konghq.com/strip-path: "true" # Remove o prefixo /load-gen-node antes de enviar para o app
 spec:
+  ingressClassName: kong # Define que o Kong deve gerenciar este Ingress
   rules:
-    - host: load-gen.local
-      http:
+    - http:
         paths:
-          - path: /
+          - path: /load-gen-node
             pathType: Prefix
             backend:
               service:
