Add Prometheus metrics configuration to Kong and SigNoz Helm charts, and introduce global Kong plugin for Prometheus metrics collection.

--- a/_hands-on/infra/helm/kong/values.yaml
+++ b/_hands-on/infra/helm/kong/values.yaml
@@ -27,6 +27,14 @@ ingressController:
   enabled: true
   installCRDs: true
 
+status:
+  enabled: true
+  http:
+    enabled: true
+    containerPort: 8100
+  tls:
+    enabled: false
+
 # Configurações para o SigNoz coletar as métricas via anotações
 podAnnotations:
   prometheus.io/scrape: "true"
