--- a/_hands-on/infra/helm/signoz/k8s-infra-values.yaml
+++ b/_hands-on/infra/helm/signoz/k8s-infra-values.yaml
@@ -51,3 +51,7 @@ presets:
   # Métricas do K8s Events
   k8sEvents:
     enabled: true
+  # Habilita a busca automática de métricas em Pods que tenham as anotações prometheus.io/scrape
+  prometheus:
+    enabled: true
+    annotationsPrefix: prometheus.io
