Refactor Istio installation in setup script to enable automatic installation and update namespace to 'platform'. Add OpenTelemetry tracing configuration to Istio values and enable Istio injection in the application namespace.

--- a/_hands-on/infra/helm/istio/values.yaml
+++ b/_hands-on/infra/helm/istio/values.yaml
@@ -7,3 +7,12 @@ global:
         cpu: 10m
         memory: 40Mi
 
+meshConfig:
+  extensionProviders:
+    - name: "otel-tracing"
+      otel:
+        service: "signoz-otel-collector.platform.svc.cluster.local"
+        port: 4318
+  defaultProviders:
+    tracing:
+      - "otel-tracing"
