Refactor project structure to implement a microservices architecture with three Node.js applications (Project A, B, and C) that interact with a load generation service. Update deployment configurations, add health check routes, and integrate OpenTelemetry for tracing. Enhance setup script for building and loading images into Kind cluster, and update project context documentation to reflect new service paths and configurations.

--- a/_hands-on/infra/helm/istio/values.yaml
+++ b/_hands-on/infra/helm/istio/values.yaml
@@ -1,5 +1,5 @@
 # Valores customizados para o Istio
-# Geralmente o Istio é instalado via istioctl ou Helm charts específicos (base, discovery)
+# Usando namespace padrão istio-system
 global:
   proxy:
     resources:
