--- a/_hands-on/infra/manifest/load-gen-node/deployment.yaml
+++ b/_hands-on/infra/manifest/load-gen-node/deployment.yaml
@@ -28,6 +28,9 @@ spec:
           imagePullPolicy: IfNotPresent
           ports:
             - containerPort: 3000
+          env:
+            - name: NODE_OPTIONS
+              value: "--max-old-space-size=432"
           resources:
             requests:
               cpu: 100m
