Enhance Helm setup script to prepare namespaces for Istio integration and update Kong values for metrics collection. Modify ingress and service manifests to support Istio sidecar injection and improve Kong configurations for load generation service.

--- a/_hands-on/infra/helm/kong/values.yaml
+++ b/_hands-on/infra/helm/kong/values.yaml
@@ -35,8 +35,9 @@ status:
   tls:
     enabled: false
 
-# Configurações para o SigNoz coletar as métricas via anotações
+# Configurações para o SigNoz coletar as métricas via anotações e injeção do Istio
 podAnnotations:
+  sidecar.istio.io/inject: "true"
   prometheus.io/scrape: "true"
   prometheus.io/port: "8100"
   prometheus.io/path: "/metrics"
